--- a/CSS/Processamento-DDA/processamentoDDAResponsivo.css
+++ b/CSS/Processamento-DDA/processamentoDDAResponsivo.css
@@ -20,3 +20,49 @@
     }
 
 }
+
+@media (max-width:1024px){ /*Responsivo Mobile*/
+    .cabecalho{
+        padding: 1.563rem 1rem;
+    }
+    .logo-anbetec{
+        width: 5.688rem;
+        height: 1.813rem;
+    }
+    .container-pesquisa{
+        margin-left: 1.5rem;
+    }
+    .pesquisa-mobile{
+        display: flex;
+        padding: 0%;
+        border: none;
+        background-color: transparent;
+    }
+    .ico-pesquisa-mobile{
+        width: 2rem;
+        height: 2rem;
+    }
+    .barra-pesquisa{
+        display: none;
+    }
+    .container__notificacao{
+        border: none;
+        padding: 0%;
+        margin-right: .5rem;
+        margin-left: 1rem;
+    }
+    .notificacao{
+        height: 2rem;
+        width: 2rem;
+    }
+    .informacoes__perfil{
+        width: 97px;
+    }
+    .banco__perfil{
+        font-size: 12px;
+    }
+    .menu-dots{
+        display: none;
+    }
+
+}
