--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -49,7 +49,7 @@
         color: var(--azul-secundaria);
     }
     .container__notificacao{
-        padding-right: 1rem;
+        padding-right: 1.25rem;
         margin-right: 1.75rem;
         border-right: 1px solid #cdcdcd;
         
@@ -72,6 +72,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        gap: 1.75rem;
         font-family: var(--mont-serrat);
         height: 2rem;
     }
@@ -82,7 +83,6 @@
         border-radius: 50%;
         width: 2rem;
         height: 2rem;
-        margin-right: .5rem;
     }
     .nome__perfil{
         margin: 0%;
@@ -104,7 +104,6 @@
 
         width: 30px;
         height: 20px;
-        margin-left: 1.938rem;
     }
     .aplicacoes{
         padding: 2rem 0 2rem 2rem;
@@ -118,6 +117,7 @@
         font-size: 14px;
         font-weight: 500;
         margin-top: 0%;
+        margin-bottom: 1rem;
 
     }
     .titulo__home{
@@ -130,7 +130,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         gap: 2rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
         padding-left: 1rem;
     }
 
@@ -155,7 +155,7 @@
 
         background-repeat: no-repeat;
         background-position-y: 1.6rem;
-        background-position-x: 1.5rem;
+        background-position-x: 2rem;
     }
     .tempo-visto {
         margin: 0%;
@@ -319,6 +319,7 @@
     }
 
     .carrousel__item___perfil{
-        width: 91vw;
+        width: 100vw;
+        padding-right: 9rem;
     }
 }
