--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -236,6 +236,13 @@
         font-size: 12px;
 
         padding: .5rem 1rem;
+
+        transition: all .2s ease-in-out;
+    }
+    .botao-cadastro:hover{
+        background-color: var(--primary-support);
+        border: 1px solid var(--primary-support);
+        color: #FFFFFF;
     }
     .sub__perfil{
         display: flex;
