--- a/CSS/Processamento-DDA/processamentoDDA.css
+++ b/CSS/Processamento-DDA/processamentoDDA.css
@@ -207,7 +207,7 @@
     }
     .input__filtro{
         height: 3.063rem;
-        width: 38.75rem;
+        width: 43vw;
 
         border: 1.02254px solid #ECECEC;
         border-radius: 8px;
@@ -245,7 +245,7 @@
         gap: 2.5rem;
     }
     .input__filtro-data{
-        width: 32.5rem;
+        width: 36vw;
         height: 3.063rem;
 
         border: 1.02254px solid #ECECEC;
@@ -368,7 +368,7 @@
         display: none;
         opacity: 0;
         transition: all .4s ease-in-out;
-        height: 75vh;
+        height: auto;
         position: relative;
 
         background-color: #FFFFFF;
@@ -487,7 +487,8 @@
         display: flex;
         justify-content: space-between;
         padding: 0 1.5rem;
-        margin-top: 8.5rem;
+        padding-right: 2.5rem;
+        margin-top: 8.331rem;
     }
 
     .botoes__marcador{
@@ -561,6 +562,8 @@
         justify-content: flex-end;
         align-items: flex-end;
         background-color: rgba(0,0,0,0.2);
+
+        transition: all .4s ease-in-out;
     }
     .configuracoes-servico{
         width: 70vw;
@@ -577,7 +580,7 @@
 
         padding: 3rem 3.438rem 2.5rem;
 
-        transition: all .3s ease-in-out;
+        transition: all .4s ease-in-out;
 
         background-color: #FFFFFF;
         border-radius: 16px 0px 0px 16px;
