--- a/CSS/Login/login.css
+++ b/CSS/Login/login.css
@@ -1,8 +1,18 @@
 @media (min-width:0px) {
+    body, html{
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
+    #body{
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
     .conteudo {
         display: flex;
         flex-direction: row;
         height: auto;
+        overflow-y: hidden;
+        overflow-x: hidden;
     }
     .vector-preenchido {
         position: absolute;
@@ -165,6 +175,8 @@
         width: 50vw;
         height: 100vh;
         background-color: #F8FBFF;
+        overflow-y: hidden;
+        overflow-x: hidden;
     }
     .login {
         width: 50vw;
@@ -174,6 +186,7 @@
         justify-content: space-around;
         align-items: center;
         overflow-y: hidden;
+        overflow-x: hidden;
     }
     .login-area{
         margin-bottom: 3rem;
