--- a/CSS/base.css
+++ b/CSS/base.css
@@ -22,6 +22,7 @@ html{
     opacity: 1;
 }
 
+
 @keyframes animatetop {
     from {top: -500px; opacity: 0}
     to {top: 0; opacity: 1}
@@ -34,3 +35,65 @@ html{
     from{opacity: 0;}
     to{opacity: 1;}
 }
+
+@keyframes animateLeftServiço {
+    from{
+        right: 0; opacity: 0;
+    }
+    to{
+        right: 100vw; opacity: 1;
+    }
+}
+
+/*--------------TOOLTIP--------------*/
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 9.313rem;
+    background-color: var(--primary);
+    color: #EAEAEA;
+    text-align: center;
+    padding: 0.625rem;
+    border-radius: 4px;
+  
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    top: 150%;
+    left: -15%;
+    margin-left: -60px;
+  
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+
+    font-size: 14px;
+    font-weight: 500;
+    font-family: var(--mont-serrat);
+  }
+  
+  /* Tooltip arrow */
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: -113%;
+    left: 36%;
+    margin-left: -5px;
+    border-width: 1.682rem;
+    border-style: solid;
+    border-color: #173A67 transparent transparent transparent ;
+    border-radius: 3px;
+
+    transform:rotateX(180deg);
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
